--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Stotrasamhita.github.io</title>
+    <title>StotraSamhita</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/stotrasamhita">View on GitHub</a>
 
-          <h1 id="project_title">Stotrasamhita.github.io</h1>
+          <h1 id="project_title">StotraSamhita</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
@@ -30,7 +30,7 @@
         <h1>
 <a name="stotrasamhitagithubio" class="anchor" href="#stotrasamhitagithubio"><span class="octicon octicon-link"></span></a>stotrasamhita.github.io</h1>
 
-<p>This will host all relevant files for stotrasamhita.net.</p>
+<p>This github repo will host all relevant files for stotrasamhita.net.</p>
 
 <p>Visit StotraSamhita at <a href="http://stotrasamhita.net/">http://stotrasamhita.net/</a></p>
       </section>
